--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ build-backend = "hatchling.build"
 
 [tool.uv]
 dev-dependencies = [
+    "pyright>=1.1.403",
     "pytest>=8.4.1",
     "ruff>=0.12.9",
 ]
@@ -45,3 +46,10 @@ select = [
 
 [tool.ruff.lint.per-file-ignores]
 "tests/*" = ["D"]
+
+
+[tool.pyright]
+include = ["src/zerosumfc/**", "tests/**"]
+typeCheckingMode = "basic"
+pythonVersion = "3.12"
+pythonPlatform = "All" 
