Changed so the game only thinks in terms of absolute roles (PLAYER, DEALER). It is up to the agents to know which role they are playing and phrase their actions in those terms.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,9 @@ dependencies = []
 # Set the maximum line length to 79.
 line-length = 79
 
+[tool.ruff.lint.isort]
+known-first-party=["zerosumfc"]
+
 [tool.ruff.lint]
 select = [
     "ASYNC", # flake8-async: check for async/await syntax
