--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,6 +23,9 @@ requires-python = ">=3.13"
 
 dependencies = [
     "click>=8.3.0",
+    "dotenv>=0.9.9",
+    "openai>=1.109.1",
+    "python-dotenv>=1.1.1",
 ]
 
 [project.scripts]
